k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: goldilocks-basicauth
  namespace: goldilocks
spec:
  basicAuth:
    secret: goldilocks-auth
    removeHeader: true
