k8s/backend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - name: http
      port: 8002
      targetPort: http
      nodePort: 30010
      protocol: TCP
